@@ -42,12 +42,14 @@ application {
 			"-XX:+UseZGC",
 			"-XX:+HeapDumpOnOutOfMemoryError",
 			"-XX:HeapDumpPath=/shiro/ShiroJBot/logs/memdump.hprof",
+			"-XX:+EnableDynamicAgentLoading",
 			"-Dfile.encoding=UTF-8",
 			"-Duser.timezone=America/Sao_Paulo",
 			"-Djava.awt.headless=true",
 			"-Dsun.java2d.opengl=True",
 			"-Dlog4j2.contextSelector=org.apache.logging.log4j.core.async.AsyncLoggerContextSelector",
-			"-Djdk.attach.allowAttachSelf=true"
+			"-Djdk.attach.allowAttachSelf=true",
+			"-Djol.tryWithSudo=true",
 //			,"-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:55000"
 	]
 }
